--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -8,13 +8,31 @@
     "\n",
     "## Final Project: Article Summarizer\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Kyle Hudson (https://github.com/cnk77)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
     "You should bring in code from previous assignments to help you answer the questions below.\n",
     "\n",
     "Every question that requires you to write code will have a code cell underneath it; you may either write your entire solution in that cell or write it in a python file (`.py`), then import and run the appropriate code to answer the question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Required imports\n",
+    "\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pickle\n",
+    "import spacy\n",
+    "from textblob import TextBlob\n",
+    "from spacy.tokens import Doc\n",
+    "import sys\n",
+    "from collections import Counter\n"
    ]
   },
   {
