--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -46,8 +46,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.5' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/mizzo/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# URL of the article\n",
+    "url = \"https://www.msn.com/en-us/news/technology/spacex-launches-crew-11-astronauts-to-the-iss-for-nasa-on-milestone-crew-dragon-flight-video/ar-AA1JKhZi\"\n",
+    "\n",
+    "# Send HTTP GET request\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Save HTML to file\n",
+    "with open(\"crew11_article.html\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    file.write(response.text)\n",
+    "\n",
+    "print(\"HTML saved to crew11_article.html\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
