--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,34 +44,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.5' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/mizzo/AppData/Local/Programs/Python/Python313/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTML saved to code4lib_article.html\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "# URL of the article\n",
-    "url = \"https://www.msn.com/en-us/news/technology/spacex-launches-crew-11-astronauts-to-the-iss-for-nasa-on-milestone-crew-dragon-flight-video/ar-AA1JKhZi\"\n",
-    "\n",
-    "# Send HTTP GET request\n",
+    "url = \"https://journal.code4lib.org/articles/13861\"\n",
     "response = requests.get(url)\n",
     "\n",
-    "# Save HTML to file\n",
-    "with open(\"crew11_article.html\", \"w\", encoding=\"utf-8\") as file:\n",
+    "with open(\"code4lib_article.html\", \"w\", encoding=\"utf-8\") as file:\n",
     "    file.write(response.text)\n",
     "\n",
-    "print(\"HTML saved to crew11_article.html\")"
+    "print(\"HTML saved to code4lib_article.html\")"
    ]
   },
   {
@@ -83,10 +76,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity Score: 0.203\n",
+      "Number of Sentences: 213\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "# Read the saved HTML file\n",
+    "with open(\"code4lib_article.html\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    soup = BeautifulSoup(file, \"html.parser\")\n",
+    "\n",
+    "# Extract article content\n",
+    "article_div = soup.find(\"div\", class_=\"article\")\n",
+    "if article_div:\n",
+    "    article_text = article_div.get_text(separator=\" \", strip=True)\n",
+    "\n",
+    "    blob = TextBlob(article_text)\n",
+    "    polarity = blob.sentiment.polarity\n",
+    "    sentence_count = len(blob.sentences)\n",
+    "\n",
+    "    print(f\"Polarity Score: {polarity:.3f}\")\n",
+    "    print(f\"Number of Sentences: {sentence_count}\")\n",
+    "else:\n",
+    "    print(\"Could not find <div class='article'> in the HTML.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
