--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Most Frequent Tokens:\n",
+      "Token: 'static' — Frequency: 56\n",
+      "Token: 'site' — Frequency: 45\n",
+      "Token: 'files' — Frequency: 39\n",
+      "Token: 'publishing' — Frequency: 33\n",
+      "Token: 'html' — Frequency: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Load spaCy's English pipeline\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Process the article text with spaCy\n",
+    "doc = nlp(article_text)\n",
+    "\n",
+    "# Normalize tokens to lowercase and filter out stop words, punctuation, and spaces\n",
+    "tokens = [token.text.lower() for token in doc if token.is_alpha and not token.is_stop]\n",
+    "\n",
+    "# Count token frequencies\n",
+    "token_freq = Counter(tokens)\n",
+    "\n",
+    "# Get the 5 most common tokens\n",
+    "most_common = token_freq.most_common(5)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Top 5 Most Frequent Tokens:\")\n",
+    "for token, freq in most_common:\n",
+    "    print(f\"Token: '{token}' — Frequency: {freq}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,10 +170,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Most Frequent Lemmas:\n",
+      "Lemma: 'site' — Frequency: 64\n",
+      "Lemma: 'file' — Frequency: 63\n",
+      "Lemma: 'static' — Frequency: 56\n",
+      "Lemma: 'publishing' — Frequency: 31\n",
+      "Lemma: 'html' — Frequency: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Load spaCy's English pipeline\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Process the article text\n",
+    "doc = nlp(article_text)\n",
+    "\n",
+    "# Normalize lemmas to lowercase and filter out stop words, punctuation, and spaces\n",
+    "lemmas = [token.lemma_.lower() for token in doc if token.is_alpha and not token.is_stop]\n",
+    "\n",
+    "# Count lemma frequencies\n",
+    "lemma_freq = Counter(lemmas)\n",
+    "\n",
+    "# Get the 5 most common lemmas\n",
+    "most_common_lemmas = lemma_freq.most_common(5)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Top 5 Most Frequent Lemmas:\")\n",
+    "for lemma, freq in most_common_lemmas:\n",
+    "    print(f\"Lemma: '{lemma}' — Frequency: {freq}\")"
+   ]
   },
   {
    "cell_type": "markdown",
