--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -313,10 +313,38 @@
    "source": [
     "7. Using the histograms from questions 5 and 6, decide a \"cutoff\" score for tokens and lemmas such that fewer than half the sentences would have a score greater than the cutoff score.  Record the scores in this Markdown cell\n",
     "\n",
-    "* Cutoff Score (tokens): \n",
-    "* Cutoff Score (lemmas):\n",
+    "* Cutoff Score (tokens): 13\n",
+    "* Cutoff Score (lemmas):  8\n",
     "\n",
     "Feel free to change these scores as you generate your summaries.  Ideally, we're shooting for at least 6 sentences for our summary, but don't want more than 10 (these numbers are rough estimates; they depend on the length of your article)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cutoff Score (tokens): 13\n",
+      "Cutoff Score (lemmas): 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate and print cutoff scores\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# Calculate median scores\n",
+    "token_cutoff = int(np.median(sentence_scores))\n",
+    "lemma_cutoff = int(np.median(sentence_lemma_scores))\n",
+    "\n",
+    "# Print cutoff values\n",
+    "print(f\"Cutoff Score (tokens): {token_cutoff}\")\n",
+    "print(f\"Cutoff Score (lemmas): {lemma_cutoff}\")"
    ]
   },
   {
