--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -396,10 +396,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity Score of Summary: 0.184\n",
+      "Number of Sentences in Summary: 140\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import TextBlob\n",
+    "\n",
+    "# Analyze polarity using TextBlob\n",
+    "summary_blob = TextBlob(summary_text)\n",
+    "polarity_score = summary_blob.sentiment.polarity\n",
+    "\n",
+    "# Count number of sentences in the summary\n",
+    "num_summary_sentences = len(summary_sentences)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Polarity Score of Summary: {polarity_score:.3f}\")\n",
+    "print(f\"Number of Sentences in Summary: {num_summary_sentences}\")"
+   ]
   },
   {
    "cell_type": "markdown",
