--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -477,10 +477,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity Score of Lemma-Based Summary: 0.187\n",
+      "Number of Sentences in Lemma-Based Summary: 135\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import TextBlob\n",
+    "\n",
+    "# Analyze polarity using TextBlob\n",
+    "lemma_summary_blob = TextBlob(lemma_summary_text)\n",
+    "lemma_polarity_score = lemma_summary_blob.sentiment.polarity\n",
+    "\n",
+    "# Count number of sentences in the lemma-based summary\n",
+    "num_lemma_summary_sentences = len(lemma_summary_sentences)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Polarity Score of Lemma-Based Summary: {lemma_polarity_score:.3f}\")\n",
+    "print(f\"Number of Sentences in Lemma-Based Summary: {num_lemma_summary_sentences}\")"
+   ]
   },
   {
    "cell_type": "markdown",
