--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -313,7 +313,7 @@
     "7. Using the histograms from questions 5 and 6, decide a \"cutoff\" score for tokens and lemmas such that fewer than half the sentences would have a score greater than the cutoff score.  Record the scores in this Markdown cell\n",
     "\n",
     "* Cutoff Score (tokens): 20\n",
-    "* Cutoff Score (lemmas):  8\n",
+    "* Cutoff Score (lemmas):  13\n",
     "\n",
     "Feel free to change these scores as you generate your summaries.  Ideally, we're shooting for at least 6 sentences for our summary, but don't want more than 10 (these numbers are rough estimates; they depend on the length of your article)."
    ]
@@ -496,7 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. Based on your reading of the original article, which summary do you think is better (if there's a difference).  Why do you think this might be?"
+    "13. Based on your reading of the original article, which summary do you think is better (if there's a difference).  Why do you think this might be? \n",
+    "\n",
+    "I prefer the token based summary simply because it is a bit shorter, 58 sentences instead of 68. The summaries content is very similar and gives a decent summary although occasionally a bit more technical than needed."
    ]
   }
  ],
